Output to text file, export to png